--- a/index.html
+++ b/index.html
@@ -8,15 +8,44 @@
     <link rel="stylesheet" href="./css/mobile.css">
     <link rel="stylesheet" href="./css/tablette.css" media="(min-width: 768px) and (max-width: 1240px)">
     <link rel="stylesheet" href="./css/desktop.css" media="(min-width: 1240px)">
-
     <script src="https://kit.fontawesome.com/2a6d7ea1c5.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
+    <!--Header-->
     <header>
-
+        <h1><img id="logo-ohmyfood" src="images/logo/ohmyfood@2x.svg" alt=""></h1>
     </header>
-
+    <!--Fin header-->
+    
     <main>
+
+        <!--1ére section choix de la ville jusqu'à explorer nos restaurants-->
+<section>
+    <article>
+    <div id="search-city">
+        <i class="fas fa-map-marker-alt"></i>
+        <span id="Paris">Paris, Belleville</span>
+    </div>
+
+    <div id="bloc-section">
+    <h1 class="title-h1">Reservez le menu qui<br>vous convient</h1>
+    <p id="discover"> Découvrez des restaurants d'exception,<br>seléctionnés par nos soins.</p>
+    <nav class="explore-restaurant">Explorer nos restaurants</nav>
+</div>
+</article>
+</section>
+
+<!--Deuxiéme section-->
+
+<section>
+<h1 class="title-h1">Fonctionnement</h1>
+
+</section>
+
+
+
+
 
     </main>
 
