--- a/index.html
+++ b/index.html
@@ -38,8 +38,14 @@
 
 <!--Deuxiéme section-->
 
-<section>
+<section id="second-section">
 <h1 class="title-h1">Fonctionnement</h1>
+<div>
+<nav class="choose">Choisissez un restaurant</nav>
+<nav class="choose">Composez votre menu</nav>
+<nav class="choose">Dégustez au restaurant</nav>
+
+</div>
 
 </section>
 
