--- a/index.html
+++ b/index.html
@@ -40,13 +40,34 @@
 
 <section id="second-section">
 <h1 class="title-h1">Fonctionnement</h1>
-<div>
-<nav class="choose">Choisissez un restaurant</nav>
-<nav class="choose">Composez votre menu</nav>
-<nav class="choose">Dégustez au restaurant</nav>
-
+<nav class="choice">
+    <div>
+    <a href="#">
+        <span>1</span>
+        <i class="fas fa-mobile-alt"></i>
+        <h3 class="choose-preference">Choisissez un restaurant</h3>
+    </a>
 </div>
 
+<div>
+    <a href="#">
+        <span>2</span>
+        <i class="fas fa-mobile-alt"></i>
+        <h3 class="choose-preference">Composez votre menu</h3>
+    </a>
+</div>
+
+
+   <div><a href="#">
+        <span>3</span>
+        <i class="fas fa-mobile-alt"></i>
+        <h3 class="choose-preference">Dégustez au restaurant</h3>
+    </a>
+</div>
+
+
+
+</nav>
 </section>
 
 
