--- a/index.html
+++ b/index.html
@@ -40,27 +40,28 @@
 
 <section id="second-section">
 <h1 class="title-h1">Fonctionnement</h1>
-<nav class="choice">
-    <div>
-    <a href="#">
-        <span>1</span>
+<nav id="choice">
+    <div class="flex-choice">
+    <a href="#" class="a-second-section">
+        <span class="number">1</span>
         <i class="fas fa-mobile-alt"></i>
         <h3 class="choose-preference">Choisissez un restaurant</h3>
     </a>
 </div>
 
-<div>
-    <a href="#">
-        <span>2</span>
-        <i class="fas fa-mobile-alt"></i>
+<div class="flex-choice">
+    <a href="#" class="a-second-section">
+        <span class="number">2</span>
+        <i class="fas fa-list"></i>
         <h3 class="choose-preference">Composez votre menu</h3>
     </a>
 </div>
 
 
-   <div><a href="#">
-        <span>3</span>
-        <i class="fas fa-mobile-alt"></i>
+   <div class="flex-choice">
+    <a href="#" class="a-second-section">
+        <span class="number">3</span>
+        <i class="fas fa-store logo_menu"></i>
         <h3 class="choose-preference">Dégustez au restaurant</h3>
     </a>
 </div>
