--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <!--Fin loading spinner-->
     <!--Header-->
     <header>
-      <img id="logo-ohmyfood" src="images/logo/ohmyfood@2x.svg" alt=""/>
+      <img id="logo-ohmyfood" src="images/logo/ohmyfood@2x.svg" alt="logo du site ohmyfood"/>
     </header>
     <!--Fin header-->
 
@@ -204,7 +204,30 @@
     </main>
 
     <footer>
+        <h1 id="white-logo">Ohmyfood</h1>
+        <a class="a-footer-section" href="#">
+        <div class="flex-footer">
+            <i class="fas fa-utensils"></i>
+            <p class="option">Proposer un restaurant</p>
+        </div>
+    </a>
 
+   <a class="a-footer-section" href="#">
+        <div class="flex-footer">
+            <i class="fas fa-hands-helping"></i>
+            <p class="option">Devenir partenaire</p>
+        </div>
+    </a>
+
+    <a class="a-footer-section" href="#">
+       <p class="option">Mentions légales</p>
+    </a>
+
+    <a class="a-footer-section" href="#">
+        <p class="option">Contact</p>
+     </a>
+
+       
     </footer>
     <!--Fin footer-->
   </body>
