--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <!-------------------Toisiéme section------------------>
 
       <section id="third-section">
-        <h1>Restaurants</h1>
+        <h1 class="title-restaurant">Restaurants</h1>
 
         <article class="restaurants">
           <!----La palette du gout---->
