--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Ohmyfood</title>
-    <link rel="stylesheet" href="./css/mobile.css" />
+    <link rel="stylesheet" href="./css/mobile.css"/>
     <link
       rel="stylesheet"
       href="./css/tablette.css"
@@ -29,23 +29,23 @@
 <!--Fin loading spinner-->
     <!--Header-->
     <header>
-      <img id="logo-ohmyfood" src="images/logo/ohmyfood@2x.svg" alt="logo du site ohmyfood"/>
+      <img id="logo-ohmyfood" src="images/logo/ohmyfood@2x.svg" alt="logo du site ohmyfood">
     </header>
     <!--Fin header-->
 
     <main>
-      <!------1ére section choix de la ville jusqu'à explorer nos restaurants------->
+      <!--1ére section choix de la ville jusqu'à explorer nos restaurants-->
       <section>
         <article>
           <div id="search-city">
             <i class="fas fa-map-marker-alt"></i>
-            <span id="Paris">Paris, Belleville</span>
+            <h4 id="Paris">Paris, Belleville</h4>
           </div>
 
           <div id="bloc-section">
-            <h2 class="title-h1">Reservez le menu qui<br/>vous convient</h2>
+            <h2 class="title-h1">Reservez le menu qui<br>vous convient</h2>
             <p id="discover">
-              Découvrez des restaurants d'exception,<br/>seléctionnés par nos
+              Découvrez des restaurants d'exception,<br>seléctionnés par nos
               soins.
             </p>
             <nav class="explore-restaurant">Explorer nos restaurants</nav>
@@ -53,7 +53,7 @@
         </article>
       </section>
 
-      <!----------------Deuxiéme section--------------->
+      <!--Deuxiéme section-->
 
       <section id="second-section">
         <h1 class="title-h1">Fonctionnement</h1>
@@ -84,12 +84,13 @@
         </nav>
       </section>
 
-      <!-------------------Toisiéme section------------------>
+      <!--Toisiéme section-->
 
       <section id="third-section">
-        <h1 class="title-restaurant">Restaurants</h1>
-
+        
         <article class="restaurants">
+          <h1 class="title-restaurant">Restaurants</h1>
+
           <!----La palette du gout---->
           <div class="backround-card">
             <a
@@ -101,7 +102,7 @@
                   class="pictures"
                   src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                   alt="menu la palette du gout, avec pains et couverts"
-                />
+                >
                 <span class="new">Nouveau</span>
               </div>
               <article class="flex-menu">
@@ -131,7 +132,7 @@
                   class="pictures"
                   src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                   alt="menu la note enchantée, avec verre et assiette garnie"
-                />
+                >
                 <span class="new">Nouveau</span>
               </div>
               <article class="flex-menu">
@@ -157,7 +158,7 @@
                 class="pictures"
                 src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                 alt="menu à la française, avec belle assiette garnie"
-              />
+              >
               <article class="flex-menu">
                 <div>
                   <h3 class="title">Le délice des sens</h3>
@@ -181,7 +182,7 @@
                 class="pictures"
                 src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                 alt="menu le délice des sens, assiette rectangulaire garnie"
-              />
+              >
 
               <article class="flex-menu">
                 <div>
