--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main>
       <!--1ére section choix de la ville jusqu'à explorer nos restaurants-->
       <section>
-        <article>
+        <div>
           <div id="search-city">
             <i class="fas fa-map-marker-alt"></i>
             <h4 id="Paris">Paris, Belleville</h4>
@@ -50,13 +50,13 @@
             </p>
             <nav class="explore-restaurant">Explorer nos restaurants</nav>
           </div>
-        </article>
+        </div>
       </section>
 
       <!--Deuxiéme section-->
 
       <section id="second-section">
-        <h1 class="title-h1">Fonctionnement</h1>
+        <h2 class="title-h1">Fonctionnement</h2>
         <nav id="choice">
           <div class="flex-choice">
             <a href="#" class="a-second-section">
@@ -88,10 +88,10 @@
 
       <section id="third-section">
         
-        <article class="restaurants">
-          <h1 class="title-restaurant">Restaurants</h1>
+        <div class="restaurants">
+          <h2 class="title-restaurant">Restaurants</h2>
 
-          <!----La palette du gout---->
+          <!--La palette du gout-->
           <div class="backround-card">
             <a
               href="restaurants/La-palette-du-gout.html"
@@ -117,7 +117,7 @@
                   <i class="far fa-heart"></i>
                   <!--empty-->
                 </div>
-              </article>
+              </div>
             </a>
           </div>
 
