--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
   <body>
 <!--Loading spinner-->
 
+<div id="wrapper">
+  <div id="spinner"></div>
+  <div>
+    <h2 id="chargement">loading</h2>
+  </div>
+</div>
+
+<!--Fin loading-spinner-->
 
 <!--Fin loading spinner-->
     <!--Header-->
