--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ohmyfood</title>
-  <link rel="stylesheet" href="./css/mobile.css">
-  <link rel="stylesheet" href="./css/tablette.css" media="(min-width: 768px) and (max-width: 1240px)">
-  <link rel="stylesheet" href="./css/desktop.css" media="(min-width: 1240px)">
+  <link rel="stylesheet" href="mobile.css">
+  <link rel="stylesheet" href="tablette.css" media="(min-width: 768px) and (max-width: 1240px)">
+  <link rel="stylesheet" href="desktop.css" media="(min-width: 1240px)">
   <script src="https://kit.fontawesome.com/2a6d7ea1c5.js" crossorigin="anonymous"></script>
 </head>
 
