--- a/restaurants/A-la-française.html
+++ b/restaurants/A-la-française.html
@@ -6,16 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ohmyfood</title>
-  <link rel="stylesheet" href="mobile.css">
-  <link rel="stylesheet" href="tablette.css" media="(min-width: 768px) and (max-width: 1240px)">
-  <link rel="stylesheet" href="desktop.css" media="(min-width: 1240px)">
+  <link rel="stylesheet" href=".mobile.css">
+  <link rel="stylesheet" href=".tablette.css" media="(min-width: 768px) and (max-width: 1240px)">
+  <link rel="stylesheet" href=".desktop.css" media="(min-width: 1240px)">
   <script src="https://kit.fontawesome.com/2a6d7ea1c5.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <!--Header-->
   <header>
-    <img id="logo-ohmyfood" src="images/logo/ohmyfood@2x.svg" alt="logo du site ohmyfood"/>
+    <img id="logo-ohmyfood" src="/images/logo/ohmyfood@2x.svg" alt="logo du site ohmyfood"/>
   </header>
   <!--Fin header-->
 
