--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
     </div>
   </div>
 
-  <!--Fin loading-spinner-->
-
   <!--Fin loading spinner-->
   <!--Header-->
   <header>
-    <img id="logo-ohmyfood" src="/images/logo/ohmyfood@2x.svg" alt="logo du site ohmyfood">
+    <img id="logo-ohmyfood" src="images/logo/ohmyfood@2x.svg" alt="logo du site ohmyfood">
   </header>
   <!--Fin header-->
 
