--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <!--Fin loading spinner-->
   <!--Header-->
   <header>
-    <img id="logo-ohmyfood" src="images/logo/ohmyfood@2x.svg" alt="logo du site ohmyfood">
+    <img id="logo-ohmyfood" src="images/logo/ohmyfood@2x.svg"logo du site ohmyfood">
   </header>
   <!--Fin header-->
 
