--- a/restaurants/A-la-française.html
+++ b/restaurants/A-la-française.html
@@ -15,7 +15,7 @@
 <body>
   <!--Header-->
   <header>
-    <img id="logo-ohmyfood" src="images/logo/ohmyfood@2x.svg" alt="logo du site ohmyfood"/>
+    <img id="logo-ohmyfood" src="/images/logo/ohmyfood@2x.svg" alt="logo du site ohmyfood"/>
   </header>
   <!--Fin header-->
 
