erreur logo résolu

--- a/restaurants/A-la-française.html
+++ b/restaurants/A-la-française.html
@@ -6,38 +6,35 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ohmyfood</title>
-  <link rel="stylesheet" href="../css/mobile.css">
-  <link rel="stylesheet" href="../css/tablette.css" media="(min-width: 768px) and (max-width: 1240px)">
-  <link rel="stylesheet" href="../css/desktop.css" media="(min-width: 1240px)">
+  <link rel="stylesheet" href= ../css/mobile.css>
+  <link rel="stylesheet" href="../css/tablette.css" media="(min-width: 768px) and (max-width: 1240px)"/>
+  <link rel="stylesheet" href="../css/desktop.css" media="(min-width: 1240px)"/>
   <script src="https://kit.fontawesome.com/2a6d7ea1c5.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <!--Header-->
   <header>
-    <img src="images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+    <img id="logo-ohmyfood" src="/images/logo/ohmyfood@2x.svg" alt="logo du site ohmyfood">
   </header>
   <!--Fin header-->
 
   <main>
-    
+  
   </main>
 
   <!--Footer-->
   <footer>
     <h1 class="white-logo">ohmyfood</h1>
     <ul class="flex-info">
-      <li>
-        <a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a>
-      </li>
-      <li>
-        <a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
-      </li>
+      <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+      <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
       <li><a href="#">Mentions légales</a></li>
       <li><a href="mailto:service-client@gmail.com">Contact</a></li>
     </ul>
   </footer>
   <!--Fin footer-->
+
 </body>
 
 </html>
