--- a/restaurants/A-la-française.html
+++ b/restaurants/A-la-française.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ohmyfood</title>
-  <link rel="stylesheet" href= ../css/mobile.css>
+  <link rel="stylesheet" href= ../css/mobile.css> <!--Bien mettre les 2 petits points aussi non ne fonctionne pas sur gitHub-->
   <link rel="stylesheet" href="../css/tablette.css" media="(min-width: 768px) and (max-width: 1240px)"/>
   <link rel="stylesheet" href="../css/desktop.css" media="(min-width: 1240px)"/>
   <script src="https://kit.fontawesome.com/2a6d7ea1c5.js" crossorigin="anonymous"></script>
@@ -15,7 +15,7 @@
 <body>
   <!--Header-->
   <header>
-    <img id="logo-ohmyfood" src="../images/logo/ohmyfood@2x.svg" alt="logo du site ohmyfood">
+    <img id="logo-ohmyfood" src="../images/logo/ohmyfood@2x.svg" alt="logo du site ohmyfood"> <!--Mettre les 2 points devant image aussi non logo ne s'affiche sur gitHub"-->
   </header>
   <!--Fin header-->
 
