--- a/restaurants/La-palette-du-gout.html
+++ b/restaurants/La-palette-du-gout.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ohmyfood</title>
+  <title>La palette du goût</title>
   <link rel="stylesheet" href= ../css/mobile.css> <!--Bien mettre les 2 petits points aussi non ne fonctionne pas sur gitHub-->
   <link rel="stylesheet" href="../css/tablette.css" media="(min-width: 768px) and (max-width: 1240px)"/>
   <link rel="stylesheet" href="../css/desktop.css" media="(min-width: 1240px)"/>
@@ -15,12 +15,16 @@
 <body>
   <!--Header-->
   <header>
-    <img id="logo-ohmyfood" src="../images/logo/ohmyfood@2x.svg" alt="logo du site ohmyfood"> <!--Mettre les 2 points devant image aussi non logo ne s'affiche sur gitHub"-->
+    <div class="arrow-and-img"> <!--Fléche pour retourner sur la page d'accueil index.html-->
+      <a href="/index.html"><i class="fas fa-arrow-left"></i></a>  <!--Mettre la / pour que le lien vers index.html fonctionne-->
+    <img id="logo-ohmyfood" src="../images/logo/ohmyfood@2x.svg" alt="logo du site ohmyfood"> <!--Mettre les 2 points devant images aussi non logo ne s'affiche sur gitHub"-->
+  </div>
   </header>
   <!--Fin header-->
 
   <main>
-  
+  <img src="../images/restaurants-images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo plat restaurant la palette du gout"> <!--Bien mettre le s .. pour voir l'image-->
+
   </main>
 
   <!--Footer-->
