--- a/restaurants/Le-délice-des-sens.html
+++ b/restaurants/Le-délice-des-sens.html
@@ -15,7 +15,7 @@
 <body>
   <!--Header-->
   <header>
-    <img id="logo-ohmyfood" src="../images/logo/ohmyfood@2x.svg" alt="logo du site ohmyfood"> <!--Mettre les 2 points devant image aussi non logo ne s'affiche sur gitHub"-->
+    <img id="logo-ohmyfood" src="../images/logo/ohmyfood@2x.svg" alt="logo du site ohmyfood"> <!--Mettre les 2 points devant images aussi non logo ne s'affiche sur gitHub"-->
   </header>
   <!--Fin header-->
 
