--- a/restaurants/La-palette-du-gout.html
+++ b/restaurants/La-palette-du-gout.html
@@ -20,7 +20,7 @@
   <header>
     <div class="arrow-and-img">
       <!--Fléche pour retourner sur la page d'accueil index.html-->
-      <a href="../index.html"><i class="fas fa-arrow-left"></i></a>
+      <a href="/index.html"><i class="fas fa-arrow-left"></i></a>
       <!--Mettre un seul point . et la / pour que le lien vers index.html fonctionne sur gitHub-->
       <img id="logo-ohmyfood" src="../images/logo/ohmyfood@2x.svg" alt="logo du site ohmyfood" />
       <!--Mettre les 2 points devant images aussi non logo ne s'affiche sur gitHub"-->
