--- a/restaurants/La-palette-du-gout.html
+++ b/restaurants/La-palette-du-gout.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>La palette du goût</title>
   <link rel="stylesheet" href=../css/mobile.css>
-  <!--Bien mettre les 2 petits points aussi non ne fonctionne pas sur gitHub-->
+  <!--Bien mettre les 2 petits points aussi non ne fonctionne pas sur gitHub ../ car cette page est située dans un dossier deux niveaux au-dessus de la page « palette-du-gout.html ».-->
   <link rel="stylesheet" href="../css/tablette.css" media="(min-width: 768px) and (max-width: 1240px)" />
   <link rel="stylesheet" href="../css/desktop.css" media="(min-width: 1240px)" />
   <script src="https://kit.fontawesome.com/2a6d7ea1c5.js" crossorigin="anonymous"></script>
@@ -20,7 +20,7 @@
   <header>
     <div class="arrow-and-img">
       <!--Fléche pour retourner sur la page d'accueil index.html-->
-      <a href="../index.html"><i class="fas fa-arrow-left"></i></a>
+      <a href="../index.html"><i class="fas fa-arrow-left"></i></a> <!--Bien mettre ../ avant index-->
       <!--Mettre un seul point . et la / pour que le lien vers index.html fonctionne sur gitHub-->
       <img id="logo-ohmyfood" src="../images/logo/ohmyfood@2x.svg" alt="logo du site ohmyfood" />
       <!--Mettre les 2 points devant images aussi non logo ne s'affiche sur gitHub"-->
@@ -31,13 +31,12 @@
   <main>
     <img class="img-menus" src="../images/restaurants-images/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
       alt="photo plat restaurant la palette du gout" />
-    <!--Bien mettre le s .. pour voir l'image-->
+    <!--Bien mettre le ../ pour voir l'image-->
 
     <!--Section (1 seule section sur toute la page)-->
     <section>
       <div class=" flex-heart">
-        <h1>La palette du goût</h1>
-
+        <h1>La palette du goût</h1> <!--Coeur + titre en display-flex-->
         <div class="heart">
           <i class="fas fa-heart"></i>
           <!--full-->
@@ -46,8 +45,11 @@
         </div>
       </div>
 
+      
+<h2 class="title-border-bottom">ENTRÉES</h2>
+<article class="choice-menus">
 
-
+</article>
 
 
 
