--- a/restaurants/La-palette-du-gout.html
+++ b/restaurants/La-palette-du-gout.html
@@ -48,8 +48,24 @@
       
 <h2 class="title-border-bottom">ENTRÉES</h2>
 <article class="choice-menus">
+<!--ENTREES--> 
+<article class="choice-menus">
+  <h3 class="title-border-bottom">ENTRÉES</h3>
+  <div class="flex-info-detail-menu">
+  <p class="title-menu"><strong> Fricassée d'escargot </strong><br><span> Au piment d'espelette</span></p>
+  <div class="price-check" >
+  <p class="price"><strong>25€</strong></p>
+    <i class="fa-check fas logo_check"></i>
+    </div>
+  </div>
 
+
+
+  
 </article>
+
+
+
 
 
 
