--- a/restaurants/La-palette-du-gout.html
+++ b/restaurants/La-palette-du-gout.html
@@ -59,7 +59,7 @@
   </div>
 
   <div class="flex-info-detail-menu">
-    <p class="title-menu"><strong> Fricassée d'escargot </strong><br><span> Au piment d'espelette</span></p>
+    <p class="title-menu"><strong> Foie gras de canard mi-cuit</strong><br><span> Et ses copeaux de truffe noire</span></p>
     <div class="price-check" >
     <p class="price"><strong>25€</strong></p>
       <i class="fa-check fas logo_check"></i>
@@ -67,7 +67,7 @@
     </div>
 
     <div class="flex-info-detail-menu">
-      <p class="title-menu"><strong> Fricassée d'escargot </strong><br><span> Au piment d'espelette</span></p>
+      <p class="title-menu"><strong> Oeuf au plat </strong><br><span>Assaisoné à la truffe sur lit de...</span></p>
       <div class="price-check" >
       <p class="price"><strong>25€</strong></p>
         <i class="fa-check fas logo_check"></i>
@@ -75,11 +75,11 @@
       </div>
   </article>
 
-<!--ENTREES--> 
+<!--PLATS--> 
 <article class="choice-menus">
-  <h3 class="title-border-bottom">ENTRÉES</h3>
+  <h3 class="title-border-bottom">PLATS</h3>
   <div class="flex-info-detail-menu">
-  <p class="title-menu"><strong> Fricassée d'escargot </strong><br><span> Au piment d'espelette</span></p>
+  <p class="title-menu"><strong> Filet de boeuf aux herbes </strong><br><span> Accompagné de sa ribambelle de légu...</span></p>
   <div class="price-check" >
   <p class="price"><strong>25€</strong></p>
     <i class="fa-check fas logo_check"></i>
@@ -87,7 +87,7 @@
   </div>
 
   <div class="flex-info-detail-menu">
-    <p class="title-menu"><strong> Fricassée d'escargot </strong><br><span> Au piment d'espelette</span></p>
+    <p class="title-menu"><strong> Parmentier de queue de boeuf </strong><br><span>A la truffe noire sur sa purée de panais</span></p>
     <div class="price-check" >
     <p class="price"><strong>25€</strong></p>
       <i class="fa-check fas logo_check"></i>
@@ -95,7 +95,7 @@
     </div>
 
     <div class="flex-info-detail-menu">
-      <p class="title-menu"><strong> Fricassée d'escargot </strong><br><span> Au piment d'espelette</span></p>
+      <p class="title-menu"><strong> Filet de Turbot </strong><br><span> Aux agrumes</span></p>
       <div class="price-check" >
       <p class="price"><strong>25€</strong></p>
         <i class="fa-check fas logo_check"></i>
@@ -103,11 +103,11 @@
       </div>
   </article>
 
-  <!--ENTREES--> 
+  <!--DESSERTS--> 
 <article class="choice-menus">
-  <h3 class="title-border-bottom">ENTRÉES</h3>
+  <h3 class="title-border-bottom">DESSERTS</h3>
   <div class="flex-info-detail-menu">
-  <p class="title-menu"><strong> Fricassée d'escargot </strong><br><span> Au piment d'espelette</span></p>
+  <p class="title-menu"><strong> Paris-brest </strong><br><span> Revisité</span></p>
   <div class="price-check" >
   <p class="price"><strong>25€</strong></p>
     <i class="fa-check fas logo_check"></i>
@@ -115,7 +115,7 @@
   </div>
 
   <div class="flex-info-detail-menu">
-    <p class="title-menu"><strong> Fricassée d'escargot </strong><br><span> Au piment d'espelette</span></p>
+    <p class="title-menu"><strong> Macaron au chocolat d'exception </strong><br><span>Et glace à la vanille de madagascar</span></p>
     <div class="price-check" >
     <p class="price"><strong>25€</strong></p>
       <i class="fa-check fas logo_check"></i>
@@ -123,7 +123,7 @@
     </div>
 
     <div class="flex-info-detail-menu">
-      <p class="title-menu"><strong> Fricassée d'escargot </strong><br><span> Au piment d'espelette</span></p>
+      <p class="title-menu"><strong> Mousse au chocolat </strong><br><span> Au piment d'espelette et à la truffe noire</span></p>
       <div class="price-check" >
       <p class="price"><strong>25€</strong></p>
         <i class="fa-check fas logo_check"></i>
