--- a/restaurants/La-palette-du-gout.html
+++ b/restaurants/La-palette-du-gout.html
@@ -34,9 +34,9 @@
     <!--Bien mettre le ../ pour voir l'image-->
 
     <!--Section (1 seule section sur toute la page)-->
-    <section>
+    <section class="name-restaurants">
       <div class=" flex-heart">
-        <h1>La palette du goût</h1> <!--Coeur + titre en display-flex-->
+        <h1 class="title-bold">La palette du goût</h1> <!--Coeur + titre en display-flex-->
         <div class="heart">
           <i class="fas fa-heart"></i>
           <!--full-->
@@ -131,8 +131,7 @@
       </div>
   </article>
 
-
-
+  
 
     </section>
   </main>
