--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
 
         <div id="bloc-section">
-          <h2 class="title-h1">Reservez le menu qui vous convient</h2>
+          <h2 id="reservez" class="title-h1">Reservez le menu qui vous convient</h2>
           <p id="discover">
             Découvrez des restaurants d'exception, seléctionnés par nos
             soins.
@@ -187,6 +187,7 @@
 
   <!--Footer-->
   <footer>
+    <div class="footer-reverse">
     <h1 class="white-logo">ohmyfood</h1>
     <ul class="flex-info">
       <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
@@ -194,6 +195,7 @@
       <li><a href="#">Mentions légales</a></li>
       <li><a href="mailto:service-client@gmail.com">Contact</a></li>
     </ul>
+    </div>
   </footer>
   <!--Fin footer-->
 
