change name files

--- a/restaurants/Le-délice-des-sens.html
+++ b/restaurants/Le-délice-des-sens.html
@@ -8,10 +8,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Le délice des sens</title>
-  <link rel="stylesheet" href=../css/mobile.css>
+  <link rel="stylesheet" href=../css/home.mobile.css>
   <!--Bien mettre les 2 petits points aussi non ne fonctionne pas sur gitHub ../ car cette page est située dans un dossier deux niveaux au-dessus de la page « palette-du-gout.html ».-->
-  <link rel="stylesheet" href="../css/tablette.css" media="(min-width: 768px) and (max-width: 1240px)" />
-  <link rel="stylesheet" href="../css/desktop.css" media="(min-width: 1240px)" />
+  <link rel="stylesheet" href="../css/home.tablette.css" media="(min-width: 768px) and (max-width: 1240px)" />
+  <link rel="stylesheet" href="../css/home.desktop.css" media="(min-width: 1240px)" />
   <script src="https://kit.fontawesome.com/2a6d7ea1c5.js" crossorigin="anonymous"></script>
 </head>
 
